Fix empty non-list-collection serializing & remove unnecessary annotation